Update finalize.md